content/boundary/v0.19.x/content/docs/deploy/self-managed/install.mdx
---
layout: docs
page_title: Install Boundary
description: >-
 Deploy a self-managed version of Boundary Enterprise or Community Edition on Ubuntu/Debian, CentOS/RHEL, or Amazon Linux by installing the binary file.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Install Boundary

Pre-built Boundary packages are available from the [HashiCorp Linux
Repository](https://www.hashicorp.com/blog/announcing-the-hashicorp-linux-repository).
In addition to installing the Boundary binary, the official package also
provides a systemd service unit, and a local `boundary` user account under which
the service runs.

<Note>

You must complete the following steps for each Boundary controller and worker
node that you want to deploy. The binary operates as either a worker or
controller, depending on the configuration that you generate for the
Boundary binary.

</Note>

The steps vary by Linux distribution.

Select your distribution of Boundary, and complete the steps to install the
binary:

<Tabs>
<Tab heading="Enterprise">

<Tabs>
<Tab heading="Ubuntu/Debian">

1. Use the following command to add the HashiCorp GPC key as a trusted
   package-signing key:

    ```shell-session
    $ curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
    ```
1. Add the official HashiCorp Linux repository:

    ```shell-session
    $ echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
    ```

1. Update the package index:

    ```shell-session
    $ sudo apt update
    ```

1. Install Boundary Enterprise:

    ```shell-session
    $ sudo apt install boundary-enterprise
    ```

</Tab>
<Tab heading="CentOS/RHEL">

1. Use the following command to install `yum-config-manager` to manage your
   repositories:

    ```shell-session
    $ sudo yum install -y yum-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
    ```

3. Install Boundary Enterprise:

    ```shell-session
    $ sudo yum -y install boundary-enterprise
    ```

</Tab>
<Tab heading="Amazon Linux">

1. Use the following command to install `yum-config-manager` to manage your
   repositories:

    ```shell-session
    $ sudo yum install -y yum-utils shadow-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
    ```

3. Install Boundary Enterprise:

    ```shell-session
    $ sudo yum -y install boundary-enterprise
    ```

</Tab>
</Tabs>
</Tab>
<Tab heading="Community Edition">
<Tabs>
<Tab heading="Ubuntu/Debian">

1. Use the following command to add the HashiCorp GPC key as a trusted
   package-signing key:

    ```shell-session
    $ curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
    ```
1. Add the official HashiCorp Linux repository:

    ```shell-session
    $ echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
    ```

1. Update the package index:

    ```shell-session
    $ sudo apt update
    ```

1. Install Boundary Community Edition:

    ```shell-session
    $ sudo apt install boundary
    ```

</Tab>
<Tab heading="CentOS/RHEL">

1. Use the following command to install `yum-config-manager` to manage your
   repositories:

    ```shell-session
    $ sudo yum install -y yum-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
    ```

3. Install Boundary Community Edition:

    ```shell-session
    $ sudo yum -y install boundary
    ```

</Tab>

<Tab heading="Amazon Linux">

1. Use the following command to install `yum-config-manager` to manage your
   repositories:

    ```shell-session
    $ sudo yum install -y yum-utils shadow-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
    ```

3. Install Boundary Community Edition:

    ```shell-session
    $ sudo yum -y install boundary
    ```

</Tab>
</Tabs>
</Tab>
</Tabs>

You should install the binary on the controller and worker instances you configure to run in your Boundary environments.

## Next steps

After you install the binary, you should:

1. [Configure controllers](/boundary/docs/deploy/self-managed/configure-controllers)
1. [Deploy workers](/boundary/docs/deploy/self-managed/deploy-workers)
1. [Initialize Boundary](/boundary/docs/deploy/self-managed/initialize)
1. [Install the Boundary Clients](/boundary/docs/deploy/self-managed/install-clients)